@@ -1,5 +1,10 @@
 2008-06-23  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Recommendations/RecommendationPane.cs:
+	Use the Banshee.Kernel to schedule/cancel recommendation refresh jobs.
+
+2008-06-23  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/DownloadManager/DownloadUserJob.cs:
 	Change the download user job's name to specify it's downloading podcasts.
 
